tests/baselines/reference/asyncGenerators.functionDeclaration.4.es2017.errors.txt
tests/cases/conformance/asyncGenerators/es2017/functionDeclarations/asyncGenerators.functionDeclaration.4.es2017.ts(1,20): error TS1138: Parameter declaration expected.
tests/cases/conformance/asyncGenerators/es2017/functionDeclarations/asyncGenerators.functionDeclaration.4.es2017.ts(1,20): error TS2304: Cannot find name 'await'.
tests/cases/conformance/asyncGenerators/es2017/functionDeclarations/asyncGenerators.functionDeclaration.4.es2017.ts(1,25): error TS1005: ';' expected.


==== tests/cases/conformance/asyncGenerators/es2017/functionDeclarations/asyncGenerators.functionDeclaration.4.es2017.ts (3 errors) ====
    async function * f(await) {}
                       ~~~~~
!!! error TS1138: Parameter declaration expected.
                       ~~~~~
!!! error TS2304: Cannot find name 'await'.
                            ~
!!! error TS1005: ';' expected.